<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">


        <ImageView
            android:id="@+id/imageArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="11dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/imagen_artista"/>

        <TextView
            android:id="@+id/textArtist"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="65dp"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/nameArtist"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="65dp" />

        <TextView
            android:id="@+id/textlistener"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="65dp"
            android:text="@string/oyentes" />

        <TextView
            android:id="@+id/listenersArtist"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="91dp"
            android:layout_marginEnd="65dp" />

        <TextView
            android:id="@+id/idRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-346dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="40dp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>