<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/dark_card_song_background"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageSong"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:riv_corner_radius="15dp" />



        <TextView
            android:id="@+id/title1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageSong"
            android:layout_marginStart="16dp"
            android:text="@string/nombreCancion"
            android:textSize="12sp"
            android:textColor="@color/gray_background" />

        <TextView
            android:id="@+id/title2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title1TextView"
            android:layout_toEndOf="@id/imageSong"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:text="@string/reproducciones"
            android:textSize="12sp"
            android:textColor="@color/gray_background" />

        <TextView
            android:id="@+id/title3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title2TextView"
            android:layout_toEndOf="@id/imageSong"
            android:layout_marginTop="15dp"
            android:layout_marginStart="16dp"
            android:text="@string/oyentes"
            android:textSize="12sp"
            android:textColor="@color/gray_background" />

        <TextView
            android:id="@+id/nameSong"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/title1TextView"
            android:layout_alignBaseline="@id/title1TextView"
            android:layout_marginStart="12dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/dark_background" />

        <TextView
            android:id="@+id/playSong"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/title2TextView"
            android:layout_alignBaseline="@id/title2TextView"
            android:layout_marginStart="12dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/dark_background" />

        <TextView
            android:id="@+id/lisenSong"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/title3TextView"
            android:layout_alignBaseline="@id/title3TextView"
            android:layout_marginStart="12dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/dark_background" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
